Fixed header logo sizing on mobile

--- a/app/styles/globals/_header.scss
+++ b/app/styles/globals/_header.scss
@@ -57,6 +57,7 @@ nav {
 
         img {
           width: 150px;
+          height: 100%;
         }
       }
     }
